--- a/package.json
+++ b/package.json
@@ -16,16 +16,23 @@
   "dependencies": {
     "@lucia-auth/adapter-prisma": "3.0.2",
     "@prisma/client": "5.9.1",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@stripe/stripe-js": "^3.0.3",
     "@t3-oss/env-nextjs": "^0.9.2",
     "lucia": "2.7.7",
     "lucide-react": "^0.331.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.0",
     "stripe": "^14.17.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,10 +40,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "class-variance-authority": "^0.7.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "prisma": "^5.9.1",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
     "zod-prisma": "^0.5.4"
